--- a/app/resource/lang/en.json
+++ b/app/resource/lang/en.json
@@ -22,6 +22,11 @@
     "FAVOURITES": "Favourites",
     "NEW_PLAYLIST_BTN": "New playlist",
     "NEW_PLAYLIST.ACCEPT_BTN": "Add playlist",
-    "NEW_PLAYLIST.CHOOSE_COVER_BTN": "Choose cover"
+    "NEW_PLAYLIST.CHOOSE_COVER_BTN": "Choose cover",
+    "UPDATE_PLAYLIST.ACCEPT_BTN": "Save",
+    "UPDATE_PLAYLIST.CHOOSE_COVER_BTN": "Chọn ảnh bìa",
+    "UPDATE_PLAYLIST.SAVE_FAILED_HEADER": "Save playlist failed",
+    "UPDATE_PLAYLIST.SAVE_FAILED_MSG": "Something wrong while updating your playlist. Please try to update playlist again.",
+    "UPDATE_PLAYLIST.SAVE_FAILED_OK": "Close"
   }
 }
