Feat: Add button to export song.

--- a/resource/langs/en.json
+++ b/resource/langs/en.json
@@ -127,8 +127,9 @@
     "PAUSE_BTN": "Pause this song",
     "EDIT_BTN": "Edit song's information",
     "EDIT_COVER_BTN": "Edit song's cover",
-    "DELETE_BTN": "Delete this song",
-    "CLOSE_BTN": "Close",
+    "DELETE_BTN": "Delete song",
+    "EXPORT_BTN": "Export song",
+    "NEXT_PAGE": "Right mouse to go to next page",
     "EDIT_FAILED_NOT_FOUND": "Song is not found in library, you might have deleted it while open our application.",
     "EDIT_FAILED_SONG_PLAYING": "You can not change cover of the playing song. Please try again after you played other song.",
     "EDIT_COVER_FAILED": "Something is wrong when saving song cover. Please try again.",
