--- a/resource/langs/vi.json
+++ b/resource/langs/vi.json
@@ -128,7 +128,8 @@
     "EDIT_BTN": "Sửa thông tin bài hát",
     "EDIT_COVER_BTN": "Thay đổi ảnh bìa bài hát",
     "DELETE_BTN": "Xoá bài hát",
-    "CLOSE_BTN": "Đóng",
+    "EXPORT_BTN": "Lưu bài hát",
+    "NEXT_PAGE": "Chuột phải sang trang",
     "EDIT_FAILED_NOT_FOUND": "Bài hát không tồn tại trong thư viện. Nó có thể đã bị xoá trong khi chạy ứng dụng.",
     "EDIT_FAILED_SONG_PLAYING": "Bạn không thể thay đổi ảnh bìa của bài hát đang phát. Xin hãy thử lại sau khi phát bài khác.",
     "EDIT_COVER_FAILED": "Có lỗi xảy ra trong quá trình lưu ảnh bìa. Xin hãy thử lại.",
